# typechecker-zoo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  translate_repo.py
algorithm-w/: Cargo.toml
coc/: Cargo.toml
coc/src/: lexer.rs
docs/: book.toml
docs/src/: SUMMARY.md  favicon.js  introduction.md
docs/src/algorithm-w/: examples.md  implementation.md  lambda-calculus.md
docs/src/appendices/: bibliography.md
docs/src/coc/: calculus-of-constructions.md  constraint-solving.md  dependent-types.md  examples.md  inductive-types.md  overview.md  type-rules.md  type-system.md  universe-polymorphism.md
docs/src/foundations/: type-systems.md
docs/src/system-f/: examples.md  implementation.md  system-f.md
docs/src/system-f-omega/: code-generation.md  examples.md  language-design.md  lexer-parser.md  system-f-omega.md  type-inference.md
system-f/: Cargo.toml
system-f-omega/: Cargo.toml
system-f-omega/src/: lexer.rs  lib.rs  main.rs  worklist.rs
system-f-omega/tests/: typeerrors_test.rs
